--- a/projects/calculation-generator/src/app/app.component.html
+++ b/projects/calculation-generator/src/app/app.component.html
@@ -1,27 +1,23 @@
 <div class="grid place-items-center w-full min-h-screen">
-@if (equationService.equations().length) {
-  @for(equation of equationService.equations(); track $index) {
-    <div class="flex gap-2">
-    @for(segment of equation.segments; track $index) {
-      <p>{{ segment.value }}</p>
+  @if (equationService.equations().length) {
+    @for (equation of equationService.equations(); track $index) {
+      <div class="flex gap-2">
+        @for (segment of equation.segments; track $index) {
+          <p>{{ segment.value }}</p>
+        }
+        <p>=</p>
+      </div>
     }
-      <p>=</p>
-    </div>
+  } @else if (equationService.isGenerating()) {
+    <p>Is generating ...</p>
+  } @else {
+    <p>Not generated</p>
   }
-}
-@else if (equationService.isGenerating()) {
-  <p>Is generating ...</p>
-}
-@else {
-  <p>Not generated</p>
-}
 
-<button
-  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
-  (click)="this.generateEquations()"
->
-  Generate
-</button>
-
-
+  <button
+    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+    (click)="this.generateEquations()"
+  >
+    Generate
+  </button>
 </div>
