--- a/projects/calculation-generator/src/app/app.component.html
+++ b/projects/calculation-generator/src/app/app.component.html
@@ -1,19 +1,13 @@
-<div class="grid place-items-center w-full min-h-screen">
+<div class="flex flex-col w-full min-h-screen">
   @if (equationService.equations().length) {
-    @for (equation of equationService.equations(); track $index) {
-      <div class="flex gap-2">
-        @for (segment of equation.segments; track $index) {
-          <p>{{ segment.value }}</p>
-        }
-        <p>=</p>
-      </div>
+    @for (equation of this.equationService.equations(); track $index) {
+      <div class="app-equation flex gap-2" [equation]="equation"></div>
     }
   } @else if (equationService.isGenerating()) {
     <p>Is generating ...</p>
   } @else {
     <p>Not generated</p>
   }
-
   <button
     class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
     (click)="this.generateEquations()"
